--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
     <!-- <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1 text-center">Work Day Scheduler</span>
     </nav> -->
-    <div class="jumbotron jumbotron-fluid">
+    <!-- <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Work Day Scheduler</h1>
           <p class="lead" id="current-date"></p>
           <p class="lead" id="current-time"></p>
         </div>
-      </div>
+      </div> -->
     <div class="container">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Work Day Scheduler</h1>
+                <p class="lead" id="current-date"></p>
+                <p class="lead" id="current-time"></p>
+            </div>
+        </div>
         <div class="row" id="current-date">
         </div>
         <div class="row" id="current-time"></div>
@@ -77,15 +84,6 @@
             </div>
         </div>
         <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="inputGroup-sizing-default">1:00 pm</span>
-            </div>
-            <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
-            </div>
-        </div><div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">1:00 pm</span>
             </div>
