html and js store eight am appointment input

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">8:00 am</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="eightAMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="eightAM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
