js stores data from html input for each hour

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">9:00 am</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="nineAMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="nineAM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -58,9 +58,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">10:00 am</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id=tenAMApp>
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="tenAM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -68,9 +68,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">11:00 am</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="elevenAMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id=elevenAM>Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -78,9 +78,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">12:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="twelvePMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="twelvePM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -88,9 +88,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">1:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id=onePMApp>
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="onePM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -98,9 +98,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">2:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="twoPMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="twoPM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -108,9 +108,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">3:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="threePMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="threePM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -118,9 +118,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">4:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="fourPMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="fourPM">Add Appointment</button>
             </div>
         </div>
         <div class="input-group mb-3">
@@ -128,9 +128,9 @@
                 <span class="input-group-text" id="inputGroup-sizing-default">5:00 pm</span>
             </div>
             <input type="text" class="form-control" placeholder="Event Details" aria-label="Recipient's username"
-                aria-describedby="basic-addon2">
+                aria-describedby="basic-addon2" id="fivePMApp">
             <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Add Appointment</button>
+                <button class="btn btn-outline-secondary" type="button" id="fivePM">Add Appointment</button>
             </div>
         </div>
     </div>
